Added files via upload

--- a/Flik 2.html
+++ b/Flik 2.html
@@ -21,7 +21,7 @@
 <div class="main">
 
 
-<center><h1>Rea</h1></center>
+
 
 </div>
 
@@ -33,6 +33,7 @@
 
 </div>
 
+<img src="/img>
 </div>
 </body>
 
