--- a/flik 3.html
+++ b/flik 3.html
@@ -21,7 +21,7 @@
 <div class="main">
 
 
-<center><h1>Rea</h1></center>
+
 
 </div>
 
@@ -33,6 +33,7 @@
 
 </div>
 
+<img src="/img>
 </div>
 </body>
 
